--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
         <title>Price Board</title>
     </head>
     <body>
-        here you will find the prices for our top technical services on excel and computer science. depending on what subscription plan you choose you will recive the features and acces that comes with it. 
+        here you will find the prices for our top technical services on excel and computer science. depending on what subscription plan you choose you will recive the fallowing features and accesses that comes with it. 
         
         
         <strong> notice: </strong>
