--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Price Board</title>
+        <title>Excellence subscription plan options</title>
     </head>
     <body>
         here you will find the prices for our top technical services on excel and computer science. depending on what subscription plan you choose you will recive the fallowing features and accesses that comes with it. 
@@ -19,5 +19,6 @@
       <ul>  advanced plan   majority Access to personal study groups and quick answers.                                            <strong>  $25 </strong>
       <ul>  expert plan     direct access to our technical support, assists from our professional technical tutors, and expert level lessons and challenges.               <strong> $40 </strong>
         
+          you will be charged at the ende of every month. you will have to temporarily deactivate your subscription plan if you can not afford it at that time.
     </body>
 </html>
