--- a/Index.html
+++ b/Index.html
@@ -14,10 +14,10 @@
         <li> once a free trial expiration date has passed no other free trials can be claimed for that acount and you will be charged a week after </ul>
         
                                     <h1> features </h1>                                                      <h1>Prices</h1>
-      <ul>  free plan       Free but limited access on questions with ads and minor lessons and videos.                            <strong> free </strong>
-      <ul>  basic plan      a quarter Access to most of the website with unlimited questions and answers no ads.                   <strong> $5 </strong>
-      <ul>  advanced plan   majority Access to personal study groups and quick answers.                                            <strong>  $25 </strong>
-      <ul>  expert plan     direct access to our technical support, assists from our professional technical tutors, and expert level lessons and challenges.               <strong> $40 </strong>
+      <li>  free plan       Free but limited access on questions with ads and minor lessons and videos.                            <strong> free </strong>
+      <li>  basic plan      a quarter Access to most of the website with unlimited questions and answers no ads.                   <strong> $5 </strong>
+      <li>  advanced plan   majority Access to personal study groups and quick answers.                                            <strong>  $25 </strong>
+      <li>  expert plan     direct access to our technical support, assists from our professional technical tutors, and expert level lessons and challenges.               <strong> $40 </strong>
         
           you will be charged at the ende of every month. you will have to temporarily deactivate your subscription plan if you can not afford it at that time.
     </body>
